windows-demo/demo.yaml
# win-demo namespace and pods
apiVersion: v1
kind: Namespace
metadata:
  labels:
    nsLabel: "win-demo"
  name: "win-demo"
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    podLabel: a
  name: a
  namespace: "win-demo"
spec:
  containers:
  - command:
    - /agnhost
    - serve-hostname
    - --tcp
    - --http=false
    - --port
    - "80"
    image: k8s.gcr.io/e2e-test-images/agnhost:2.33
    imagePullPolicy: IfNotPresent
    name: cont-80-tcp
    ports:
    - containerPort: 80
      name: serve-80-tcp
      protocol: TCP
  nodeSelector:
    kubernetes.io/os: windows
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    podLabel: b
    # demo-allow: "true"
  name: b
  namespace: "win-demo"
spec:
  containers:
  - command:
    - /agnhost
    - serve-hostname
    - --tcp
    - --http=false
    - --port
    - "80"
    image: k8s.gcr.io/e2e-test-images/agnhost:2.33
    imagePullPolicy: IfNotPresent
    name: cont-80-tcp
    ports:
    - containerPort: 80
      name: serve-80-tcp
      protocol: TCP
  nodeSelector:
    kubernetes.io/os: windows
---
# linux-demo namespace and pod
apiVersion: v1
kind: Namespace
metadata:
  labels:
    nsLabel: "linux-demo"
  name: "linux-demo"
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    podLabel: f
    # add the below label during the demo
    # demo-allow: "true"
  name: f
  namespace: "linux-demo"
spec:
  containers:
  - command:
    - /agnhost
    - serve-hostname
    - --tcp
    - --http=false
    - --port
    - "80"
    image: k8s.gcr.io/e2e-test-images/agnhost:2.33
    imagePullPolicy: IfNotPresent
    name: cont-80-tcp
    ports:
    - containerPort: 80
      name: serve-80-tcp
      protocol: TCP
  nodeSelector:
    kubernetes.io/os: linux
