windows-demo/windows-ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: windows-ingress-policy
  namespace: win-demo
spec:
  podSelector:
    matchLabels:
      podLabel: a
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: nsLabel
          operator: In
          values:
          - win-demo
          - linux-demo
      podSelector:
        matchLabels:
          demo-allow: "true"
    ports:
    - port: 80
      protocol: TCP
